syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "SharedApiUtils.ServicesAccessing.Protos";
service GameSession{
	rpc StartGameSession (StartGameSessionRequest) returns (StartGameSessionReply);
	rpc SendGameEvent (SendGameEventRequest) returns (SendGameEventReply);
	rpc EndGameSession (EndGameSessionRequest) returns (EndGameSessionReply);
	rpc GetGameSession (GetGameSessionRequest) returns (GetGameSessionReply);
}

message StartGameSessionRequest{
	string RoomId = 1;
	repeated string Members = 2;
}
message StartGameSessionReply{
	bool IsSuccess = 1;
	optional string ErrorMessage = 2;
	string SessionId = 3;
}

message SendGameEventRequest{
	string SessionId = 1;
	string Action = 2;
	string Payload = 3;
	string UserId = 4;
}

message SendGameEventReply{
	bool IsSuccess = 1;
	optional string ErrorMessage = 2;
	optional string NotifyCallerMessage = 3;
	optional string NotifyRoomMessage = 4;
}

message EndGameSessionRequest{
	string SessionId = 1;
	string EndReason = 2;
	optional string Payload = 3;
}
message EndGameSessionReply{
	bool IsSuccess = 1;
	optional string ErrorMessage = 2;
}

message GetGameSessionRequest{
	string SessionId = 1;
}
message GetGameSessionReply{
	bool IsSuccess = 1;
	optional string ErrorMessage = 2;
	GameSessionRPCModel GameSession = 3;
}
message GameSessionRPCModel{
	string SessionId = 1;
    string OwnerId = 2;
    string RoomId = 3;
    string GameId = 4;
    repeated string Players = 5;
    repeated StringIntPair PlayerScores = 6;
    string StartTime = 7;
    optional string EndTime = 8;
    string LastUpdated = 9;
    repeated GameActionRPCModel ActionsLog = 10;
	string SessionState = 11;
}
message StringIntPair{
	string key = 1;
	int32 value = 2;
}
message GameActionRPCModel{
	string PlayerId = 1;
    string ActionType = 2;
    string Timestamp = 3;
    string Payload = 4;
}